[gd_scene load_steps=15 format=2]

[ext_resource path="res://skrypty/Monster-Skeleton.gd" type="Script" id=1]
[ext_resource path="res://monster_death_anim.tres" type="Animation" id=2]
[ext_resource path="res://skrypty/playerDetection.gd" type="Script" id=3]
[ext_resource path="res://skrypty/MovementControlerTurtle.gd" type="Script" id=4]
[ext_resource path="res://grafika/monster/monster-skeleton.png" type="Texture" id=5]
[ext_resource path="res://skrypty/RangeAreaMonster.gd" type="Script" id=6]
[ext_resource path="res://muzyka/Harpoon-SoundBible.com-673032123.mp3" type="AudioStream" id=7]

[sub_resource type="Animation" id=95]
resource_name = "idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Monster1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=19]
resource_name = "walk"
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Monster1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 3, 2 ]
}

[sub_resource type="RectangleShape2D" id=96]
extents = Vector2( 15, 27 )

[sub_resource type="RectangleShape2D" id=97]
extents = Vector2( 280.5, 50 )

[sub_resource type="RectangleShape2D" id=98]
extents = Vector2( 17, 38 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 65.5, 12 )

[sub_resource type="RectangleShape2D" id=99]
extents = Vector2( 118, 40.5 )

[node name="Monster-Skeleton" type="KinematicBody2D"]
z_index = 1
z_as_relative = false
collision_layer = 0
script = ExtResource( 1 )

[node name="Monster1" type="Sprite" parent="."]
modulate = Color( 0.901961, 0.901961, 0.901961, 1 )
z_index = 3
texture = ExtResource( 5 )
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 95 )
anims/monster_death = ExtResource( 2 )
anims/walk = SubResource( 19 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 18 )
shape = SubResource( 96 )

[node name="TriggerArea" type="Area2D" parent="."]
collision_mask = 0
input_pickable = false
monitorable = false
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerArea"]
position = Vector2( -2.5, 14 )
shape = SubResource( 97 )

[node name="monsterBody" type="Area2D" parent="."]
collision_layer = 0
input_pickable = false
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="monsterBody"]
position = Vector2( -2, 7 )
shape = SubResource( 98 )

[node name="Timer" type="Timer" parent="."]

[node name="MovementControlerMonster" type="Area2D" parent="."]
collision_mask = 0
input_pickable = false
monitorable = false
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovementControlerMonster"]
position = Vector2( 0.5, -2 )
shape = SubResource( 20 )

[node name="Timer2" type="Timer" parent="."]

[node name="RangeArea" type="Area2D" parent="."]
collision_layer = 513
collision_mask = 0
input_pickable = false
monitorable = false
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeArea"]
position = Vector2( 0, 7.5 )
shape = SubResource( 99 )

[node name="Timer3" type="Timer" parent="."]

[node name="Timer4" type="Timer" parent="."]

[node name="SoundEffectCharge" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0
pitch_scale = 1.2

[connection signal="body_entered" from="TriggerArea" to="TriggerArea" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="TriggerArea" to="TriggerArea" method="_on_Area2D_body_exited"]
[connection signal="area_entered" from="MovementControlerMonster" to="MovementControlerMonster" method="_on_MovementControlerMonster_area_entered"]
[connection signal="area_exited" from="MovementControlerMonster" to="MovementControlerMonster" method="_on_MovementControlerMonster_area_exited"]
[connection signal="body_entered" from="RangeArea" to="RangeArea" method="_on_RangeArea_body_entered"]
[connection signal="body_exited" from="RangeArea" to="RangeArea" method="_on_RangeArea_body_exited"]
